TestCases/Errors/Haversine/observations/sst/spr_09_obs.spm
obs r3-c12 0.0206666666666667
obs r4-c12 0.00148148148148148
obs r5-c12 0.00285714285714286
obs r3-c13 0.0168
obs r4-c13 0.00148148148148148
obs r5-c13 0.00259259259259259
obs r5-c15 0.00222222222222222
obs r6-c15 0.00444444444444444
obs r6-c16 0.0272222222222222
obs r7-c16 0.00921031746031746
obs r7-c17 0.0112161172161172
error_value r3-c12 0.2
error_value r4-c12 0.2
error_value r5-c12 0.2
error_value r3-c13 0.2
error_value r4-c13 0.2
error_value r5-c13 0.2
error_value r5-c15 0.2
error_value r6-c15 0.2
error_value r6-c16 0.2
error_value r7-c16 0.2
error_value r7-c17 0.2
